# Juno

./: .gitignore  README.md  config.json  go.mod  go.sum  juno-cli.py  juno-discord.py  juno-test.py  juno-tokens-example-usage.json  juno.py  juno_discord.py  juno_functions.py  pyproject.toml  system prompt template.txt  system-prompt-template.txt
src/: main.go
src/ai/: ai.go
src/client/: client.go
